crimson/manifests/ns-gist/gist/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gist
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: gist
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gist
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 0 # WTF?!
        runAsGroup: 0 # WTF?!
      serviceAccountName: gist
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:1.9
          resources:
            limits:
              memory: "512Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 6157
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: http
          volumeMounts:
            # - mountPath: ~/.
            #   name: config
            #   readOnly: true
            - name: opengist-data
              mountPath: /opengist
      volumes:
        - name: opengist-data
          persistentVolumeClaim:
            claimName: opengist-data
        # - name: config
        #   configMap:
        #     name: opengist-config
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: gist
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: gist
                topologyKey: kubernetes.io/hostname
