crimson/manifests/ns-gist/gist/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gist
spec:
  selector:
    app.kubernetes.io/name: gist
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
