crimson/manifests/ns-gist/gist/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gist
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: gist.vrsf.in
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gist
                port:
                  name: http
  tls:
    - hosts:
        - gist.vrsf.in
      secretName: gist-tls
